--- a/src/app/translations/it.json
+++ b/src/app/translations/it.json
@@ -1,4 +1,5 @@
 {
     "Vehicles": "Veicoli",
-    "More details": "Maggiori Dettagli"
+    "More details": "Maggiori Dettagli",
+    "Import" :"Importare"
 }
